fixed delete file functions, added word-break
i removed filesize and file type, and added word-break on filename just in case mahaba ang pangalan without a space

also fixed the delete file functions

--- a/styles/style2.css
+++ b/styles/style2.css
@@ -1130,3 +1130,8 @@ select::after {
     width: auto;
 
 }
+
+.break-word {
+    word-break: break-word;
+    width: 13em;
+}
